--- a/DailyCaseHelper/SmartWorker.csproj
+++ b/DailyCaseHelper/SmartWorker.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Proxy\models\AccelaCase.cs" />
     <Compile Include="Proxy\JiraProxy.cs" />
     <Compile Include="Proxy\models\AccelaCaseAttachment.cs" />
+    <Compile Include="Proxy\models\AccelaCaseStatusMapper.cs" />
     <Compile Include="Proxy\models\AccelaIssue.cs" />
     <Compile Include="Proxy\models\AccelaIssueCaseMapper.cs" />
     <Compile Include="Proxy\models\AccelaIssueFields.cs" />
@@ -180,6 +181,12 @@
     <Compile Include="Model\CaseModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SyncCaseStatusCrossProject.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SyncCaseStatusCrossProject.Designer.cs">
+      <DependentUpon>SyncCaseStatusCrossProject.cs</DependentUpon>
+    </Compile>
     <Compile Include="UpdateMyJIRAIssueFromSalesforce.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -232,6 +239,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SyncCaseStatusCrossProject.resx">
+      <DependentUpon>SyncCaseStatusCrossProject.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UpdateMyJIRAIssueFromSalesforce.resx">
       <DependentUpon>UpdateMyJIRAIssueFromSalesforce.cs</DependentUpon>
     </EmbeddedResource>
