--- a/DailyCaseHelper/SmartWorker.csproj
+++ b/DailyCaseHelper/SmartWorker.csproj
@@ -181,6 +181,12 @@
     <Compile Include="Model\CaseModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScanReleaseStatusFomSalesforce.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ScanReleaseStatusFomSalesforce.Designer.cs">
+      <DependentUpon>ScanReleaseStatusFomSalesforce.cs</DependentUpon>
+    </Compile>
     <Compile Include="SyncCaseStatusCrossProject.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -239,6 +245,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ScanReleaseStatusFomSalesforce.resx">
+      <DependentUpon>ScanReleaseStatusFomSalesforce.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SyncCaseStatusCrossProject.resx">
       <DependentUpon>SyncCaseStatusCrossProject.cs</DependentUpon>
     </EmbeddedResource>
