--- a/DailyCaseHelper/SmartWorker.csproj
+++ b/DailyCaseHelper/SmartWorker.csproj
@@ -166,6 +166,7 @@
     <Compile Include="Proxy\models\AttributeType.cs" />
     <Compile Include="Proxy\models\CaseComment.cs" />
     <Compile Include="Proxy\models\Contact.cs" />
+    <Compile Include="Proxy\models\NewCaseComment.cs" />
     <Compile Include="Proxy\models\User.cs" />
     <Compile Include="Proxy\SFDCUnitTest.cs" />
     <Compile Include="Proxy\SalesforceProxy.cs" />
