--- a/DailyCaseHelper/SmartWorker.csproj
+++ b/DailyCaseHelper/SmartWorker.csproj
@@ -128,6 +128,12 @@
     <Compile Include="DailyCaseImportorFromSalesforce.Designer.cs">
       <DependentUpon>DailyCaseImportorFromSalesforce.cs</DependentUpon>
     </Compile>
+    <Compile Include="DailyWorkLogForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DailyWorkLogForm1.Designer.cs">
+      <DependentUpon>DailyWorkLogForm1.cs</DependentUpon>
+    </Compile>
     <Compile Include="DailyWrokLogForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -260,6 +266,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DailyCaseImportorFromSalesforce.resx">
       <DependentUpon>DailyCaseImportorFromSalesforce.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DailyWorkLogForm1.resx">
+      <DependentUpon>DailyWorkLogForm1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DailyWrokLogForm.resx">
       <DependentUpon>DailyWrokLogForm.cs</DependentUpon>
